src/features/reference/snapshots/texlab__features__reference__tests__definition_include_declaration.snap
---
source: src/features/reference/tests.rs
assertion_line: 80
expression: references
---
[
  {
    "uri": "file:///C:/Users/Paddy/AppData/Local/Temp/bar.tex",
    "range": {
      "start": {
        "line": 0,
        "character": 6
      },
      "end": {
        "line": 0,
        "character": 9
      }
    }
  },
  {
    "uri": "file:///C:/Users/Paddy/AppData/Local/Temp/foo.bib",
    "range": {
      "start": {
        "line": 0,
        "character": 9
      },
      "end": {
        "line": 0,
        "character": 12
      }
    }
  }
]
