src/features/reference/snapshots/texlab__features__reference__tests__entry_definition_include_declaration.snap
---
source: src/features/reference/tests.rs
assertion_line: 75
expression: references
---
[
  {
    "uri": "[tmp]/bar.tex",
    "range": {
      "start": {
        "line": 0,
        "character": 6
      },
      "end": {
        "line": 0,
        "character": 9
      }
    }
  },
  {
    "uri": "[tmp]/foo.bib",
    "range": {
      "start": {
        "line": 0,
        "character": 9
      },
      "end": {
        "line": 0,
        "character": 12
      }
    }
  }
]
