src/features/reference/snapshots/texlab__features__reference__tests__entry_reference.snap
---
source: src/features/reference/tests.rs
assertion_line: 99
expression: references
---
[
  {
    "uri": "[tmp]/bar.tex",
    "range": {
      "start": {
        "line": 0,
        "character": 6
      },
      "end": {
        "line": 0,
        "character": 9
      }
    }
  }
]
