src/features/reference/snapshots/texlab__features__reference__tests__label_definition_include_declaration.snap
---
source: src/features/reference/tests.rs
assertion_line: 173
expression: references
---
[
  {
    "uri": "[tmp]/bar.tex",
    "range": {
      "start": {
        "line": 0,
        "character": 5
      },
      "end": {
        "line": 0,
        "character": 8
      }
    }
  },
  {
    "uri": "[tmp]/foo.tex",
    "range": {
      "start": {
        "line": 0,
        "character": 7
      },
      "end": {
        "line": 0,
        "character": 10
      }
    }
  }
]
