src/features/reference/snapshots/texlab__features__reference__tests__label_reference.snap
---
source: src/features/reference/tests.rs
assertion_line: 198
expression: references
---
[
  {
    "uri": "[tmp]/bar.tex",
    "range": {
      "start": {
        "line": 0,
        "character": 5
      },
      "end": {
        "line": 0,
        "character": 8
      }
    }
  },
  {
    "uri": "[tmp]/baz.tex",
    "range": {
      "start": {
        "line": 0,
        "character": 5
      },
      "end": {
        "line": 0,
        "character": 8
      }
    }
  }
]
