src/features/reference/snapshots/texlab__features__reference__tests__label_reference_include_declaration.snap
---
source: src/features/reference/tests.rs
assertion_line: 223
expression: references
---
[
  {
    "uri": "file:///C:/Users/Paddy/AppData/Local/Temp/bar.tex",
    "range": {
      "start": {
        "line": 0,
        "character": 5
      },
      "end": {
        "line": 0,
        "character": 8
      }
    }
  },
  {
    "uri": "file:///C:/Users/Paddy/AppData/Local/Temp/foo.tex",
    "range": {
      "start": {
        "line": 0,
        "character": 7
      },
      "end": {
        "line": 0,
        "character": 10
      }
    }
  }
]
