src/features/reference/snapshots/texlab__features__reference__tests__reference.snap
---
source: src/features/reference/tests.rs
assertion_line: 102
expression: references
---
[
  {
    "uri": "file:///C:/Users/Paddy/AppData/Local/Temp/bar.tex",
    "range": {
      "start": {
        "line": 0,
        "character": 6
      },
      "end": {
        "line": 0,
        "character": 9
      }
    }
  }
]
